<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="https://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="https://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.jbellis</groupId>
        <artifactId>jvector-parent</artifactId>
        <version>${revision}</version>
    </parent>
    <artifactId>jvector-examples</artifactId>
    <name>${project.artifactId}</name>
    <properties>
        <awssdk.version>2.21.10</awssdk.version>
        <maven.compiler.release>22</maven.compiler.release>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <mainClass>io.github.jbellis.jvector.testrig.commands.TestRig</mainClass>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>22</release>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <configuration>
                    <skip>false</skip>
                    <workingDirectory>${project.parent.basedir}</workingDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>io.github.jbellis</groupId>
            <artifactId>jvector-base</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jhdf</groupId>
            <artifactId>jhdf</artifactId>
            <version>0.6.10</version>
        </dependency>
        <dependency>
            <groupId>com.indeed</groupId>
            <artifactId>util-mmap</artifactId>
            <version>1.0.52-3042601</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.7.6</version>
        </dependency>
        <dependency>
            <groupId>io.nosqlbench</groupId>
            <artifactId>vectordata</artifactId>
            <version>0.1.4-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.nosqlbench</groupId>
            <artifactId>nbvectors</artifactId>
            <version>0.1.4-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>s3-transfer-manager</artifactId>
            <version>${awssdk.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>aws-crt-client</artifactId>
            <version>${awssdk.version}</version>
        </dependency>
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>s3</artifactId>
            <version>${awssdk.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>commons-codec</artifactId>
                    <groupId>commons-codec</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.kohlschutter.junixsocket</groupId>
            <artifactId>junixsocket-core</artifactId>
            <version>2.8.1</version>
            <type>pom</type>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>jdk11</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <skip>false</skip>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sift</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>-ea</argument>
                                        <argument>io.github.jbellis.jvector.example.SiftSmall</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>bench</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>-Xmx14G</argument>
                                        <argument>-ea</argument>
                                        <argument>io.github.jbellis.jvector.example.Bench</argument>
                                        <argument>${benchArgs}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk20</id>
            <dependencies>
                <dependency>
                    <groupId>io.github.jbellis</groupId>
                    <artifactId>jvector-twenty</artifactId>
                    <version>${project.version}</version>
                    <scope>compile</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <skip>false</skip>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sift</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>--add-modules=jdk.incubator.vector</argument>
                                        <argument>-ea</argument>
                                        <argument>io.github.jbellis.jvector.example.SiftSmall</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>bench</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                                        <argument>--add-modules=jdk.incubator.vector</argument>
                                        <argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
                                        <argument>-Xmx14G</argument>
                                        <argument>-ea</argument>
                                        <argument>io.github.jbellis.jvector.example.Bench</argument>
                                        <argument>${benchArgs}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>ipcserve</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                                        <argument>--add-modules=jdk.incubator.vector</argument>
                                        <argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
                                        <argument>-ea</argument>
                                        <argument>io.github.jbellis.jvector.example.IPCService</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>ipcserve-1core</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                                        <argument>--add-modules=jdk.incubator.vector</argument>
                                        <argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
                                        <argument>-Xmx10G</argument>
                                        <argument>-ea</argument>
                                        <argument>-Djava.util.concurrent.ForkJoinPool.common.parallelism=1</argument>
                                        <argument>-Djvector.physical_core_count=1</argument>
                                        <argument>io.github.jbellis.jvector.example.IPCService</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk22</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>io.github.jbellis</groupId>
                    <artifactId>jvector-twenty</artifactId>
                    <version>${project.version}</version>
                    <scope>compile</scope>
                </dependency>
                <dependency>
                    <groupId>io.github.jbellis</groupId>
                    <artifactId>jvector-native</artifactId>
                    <version>${project.version}</version>
                    <scope>compile</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>3.7.1</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <archive>
                                <manifest>
                                    <addClasspath>true</addClasspath>
                                    <mainClass>${mainClass}</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <!--                  <ref>assembly.xml</ref>-->
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                                <!--            <descriptorRef>assembly</descriptorRef>-->
                            </descriptorRefs>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <skip>false</skip>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sift</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                                        <argument>--add-modules=jdk.incubator.vector</argument>
                                        <argument>-ea</argument>
                                        <argument>-Djvector.experimental.enable_native_vectorization=true</argument>
                                        <argument>io.github.jbellis.jvector.example.SiftSmall</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>bench</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                                        <argument>--add-modules=jdk.incubator.vector</argument>
                                        <argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
                                        <argument>-Xmx14G</argument>
                                        <argument>-ea</argument>
                                        <argument>-Djvector.experimental.enable_native_vectorization=true</argument>
                                        <argument>io.github.jbellis.jvector.example.Bench</argument>
                                        <argument>${benchArgs}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>testrig</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                                        <argument>--add-modules=jdk.incubator.vector</argument>
                                        <argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
                                        <argument>-Xmx14G</argument>
                                        <argument>-ea</argument>
                                        <argument>io.github.jbellis.jvector.testrig.commands.TestRig</argument>
                                        <argument>${benchArgs}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>ipcserve</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                                        <argument>--add-modules=jdk.incubator.vector</argument>
                                        <argument>-ea</argument>
                                        <argument>-Djvector.experimental.enable_native_vectorization=true</argument>
                                        <argument>io.github.jbellis.jvector.example.IPCService</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>ipcserve-1core</id>
                                <configuration>
                                    <arguments>
                                        <argument>-classpath</argument>
                                        <classpath/>
                                        <argument>--enable-native-access=ALL-UNNAMED</argument>
                                        <argument>--add-modules=jdk.incubator.vector</argument>
                                        <argument>-Djava.util.concurrent.ForkJoinPool.common.parallelism=1</argument>
                                        <argument>-Djvector.physical_core_count=1</argument>
                                        <argument>-Djvector.experimental.enable_native_vectorization=true</argument>
                                        <argument>-ea</argument>
                                        <argument>io.github.jbellis.jvector.example.IPCService</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
